# ml_ci_cd

./: .pre-commit-config.yml  Makefile  README.md  pyproject.toml
.github/workflows/: python_ml_worflow.yml
src/: model_building.py
tests/: test_model_building.py
