[tool.poetry]
name = "mlops-cd"
version = "0.1.0"
description = ""
authors = ["anitaokoh <sleekymeeratura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
pytest = "^7.4.3"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
